--- a/books/850b20937af93b/2-3.md
+++ b/books/850b20937af93b/2-3.md
@@ -34,7 +34,7 @@ f :: Bool -> Bool
 f x = undefined
 ```
 
-この定義は有効である，なぜなら `undefined` はボトムとして評価され，ボトムは `Bool` を含む全ての方のメンバーだから．こんな書き方も許される：
+この定義は有効である，なぜなら `undefined` はボトムとして評価され，ボトムは `Bool` を含む全ての型のメンバーだから．こんな書き方も許される：
 
 ```haskell
 f :: Bool -> Bool
