--- a/books/850b20937af93b/3-3.md
+++ b/books/850b20937af93b/3-3.md
@@ -10,7 +10,7 @@ title: "3.3 順序"
 
 これらの順序集合を圏として特徴付けよう。前順序は圏であって、任意の対象$a$から任意の対象$b$に向かう射が高々一つ存在するものである。このような圏の別名は薄い圏nである。半順序は薄い圏である。
 
-圏$\mathbf{C}$において対象$a$から対象$b$への射全体の集合を**射集合**(hom-set0とよび、$\mathbf{C}(a,b)$と書く。（しばしば$\mathbf{Hom}_C(A,b)$ともかかれる。前順序において各射集合は空集合であるか要素が一つの集合である。このことは射集合$\mathbf{C}(a,a)$についても成立するが、任意の前順序においてこれは恒等射ただ一つを要素にもつ集合でなければいけない。しかしながら、前順序においてはサイクルを持つかもしれない。半順序においてはサイクルを持つことは許されない。
+圏$\mathbf{C}$において対象$a$から対象$b$への射全体の集合を**射集合**(hom-set)とよび、$\mathbf{C}(a,b)$と書く。（しばしば$\mathbf{Hom}_C(A,b)$ともかかれる）。前順序において各射集合は空集合であるか要素が一つの集合である。このことは射集合$\mathbf{C}(a,a)$についても成立するが、任意の前順序においてこれは恒等射ただ一つを要素にもつ集合でなければいけない。しかしながら、前順序においてはサイクルを持つかもしれない。半順序においてはサイクルを持つことは許されない。
 
 前順序、半順序、全順序について認識することは、ソートのために非常に重要である。クイックソート、バブルソート、マージソートなどのソートアルゴリズムは全順序の上でのみ正しく機能する。半順序はトポロジカルソートを用いることでソートできる。
 
